--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -273,11 +273,9 @@
     </div>
 
     <div class="circle-container instagram-container">
-        <div
-                class="instagram"
-                onmouseout="restoreImage('instagram-img',  '../../images/inst.svg')"
-                onmouseover="changeImage('instagram-img',  '../../images/inst-hover.svg')"
-        >
+        <div class="instagram"
+             onmouseout="restoreImage('instagram-img',  '../../images/inst.svg')"
+             onmouseover="changeImage('instagram-img',  '../../images/inst-hover.svg')">
             <img alt="instagram" class="instagram" id="instagram-img" src="../../images/inst.svg"
                  th:src="@{images/inst.svg}">
         </div>
