--- a/src/main/resources/templates/user/recipeCreation.html
+++ b/src/main/resources/templates/user/recipeCreation.html
@@ -88,13 +88,13 @@
 
         <div class="text-form-category">
             <div class="recipeCategory">
-                <select name="recipeCategory" th:field="*{recipeCategory}">
+                <select th:field="*{recipeCategory}">
                     <option th:each="categor : ${categorys}" th:text="${categor.title}"
                             th:value="${categor.title}"></option>
                 </select>
             </div>
         </div>
-        
+
         <div class="ingredientsField">
             <div class="tableContainer">
                 <table id="ingredientsTable">
