fixed filters and added 2 recipes in database

--- a/src/main/resources/templates/user/allRecipes.html
+++ b/src/main/resources/templates/user/allRecipes.html
@@ -310,11 +310,11 @@
             <div class="sub-menu">
                 <div class="ratingContainer">
                     <div class="minRate">
-                        <input id="minRate" name="minRate" placeholder="min" required type="text">
+                        <input id="minRate" name="minRate" placeholder="min" required type="number">
                     </div>
                     <div class="line"></div>
                     <div class="maxRate">
-                        <input id="maxRate" name="maxRate" placeholder="max" required type="text">
+                        <input id="maxRate" name="maxRate" placeholder="max" required type="number">
                     </div>
                 </div>
             </div>
