--- a/src/main/resources/static/css/recipe.css
+++ b/src/main/resources/static/css/recipe.css
@@ -70,10 +70,9 @@
 
 .mini {
     position: absolute;
-    width: 10vw;
+    width: 30vw;
     height: 5.556vh;
     top: 21.5vh;
-    margin-left: 4vw;
 }
 
 .miniTime {
@@ -81,7 +80,7 @@
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 1.5vw;
     color: black;
-    margin-left: 1.7vw;
+    margin-left: 14vw;
     margin-bottom: 0.3vh;
     margin-top: 0.3vh;
 }
@@ -90,12 +89,12 @@
     position: absolute;
     width: 6vw;
     height: 4vh;
-    margin-left: 8vw;
+    margin-left: 1vw;
     margin-top: 0.2vh;
 }
 
 .miniCategories {
-    margin-left: 14vw;
+    margin-left: 5.5vw;
     width: 10vw;
 }
 
@@ -318,11 +317,11 @@
 
 .amountField, .deviceField {
     width: 14vw;
-    height: 39vh;
+    height: 37vh;
     border-radius: 5vh 5vh 0 0;
     background-color: #FBEFC7;
     margin-left: 1.5vw;
-    margin-top: 1.9vh;
+    margin-top: 2vh;
     overflow-y: scroll;
     text-align: left;
     display: flex;
@@ -343,7 +342,7 @@
     border-radius: 5vh;
     background-color: #FBEFC7;
     margin-left: 18vw;
-    margin-top: -55vh;
+    margin-top: -53vh;
     overflow-y: visible;
     overflow-x: hidden;
 }
@@ -471,7 +470,7 @@
 }
 
 .amountContent {
-    padding: 4vh 0.5vw 3vh 1vw;
+    padding: 4vh 0.5vw 0 1vw;
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 1.3vw;
 }
