fixed icons in fav drop down

--- a/src/main/resources/static/css/recipe.css
+++ b/src/main/resources/static/css/recipe.css
@@ -325,10 +325,14 @@
     margin-top: 1.9vh;
     overflow-y: scroll;
     text-align: left;
+}
+
+.textFixed {
+    position: relative;
     display: flex;
     align-content: center;
     justify-content: left;
-    text-rendering: optimizeLegibility;
+    color: black;
 }
 
 .deviceField {
