--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -261,8 +261,7 @@
         <button id="send-button">Send</button>
     </div>
 
-    <div class="copyright">© Company policy and privacy rules</div>
-
+    <div class="copyright" th:href="@{/privacyRules}">© Company policy and privacy rules</div>
     <div class="circle-container telegram-container">
         <div class="telegram"
              onmouseout="restoreImage('telegram-img', '../../images/telegram.svg')"
